[package]
name = "klask"
version = "1.0.0"
authors = ["Michał Gniadek <mgniadek@interia.pl>"]
edition = "2018"
license = "MIT"
description = "Automatically create GUI for clap apps"
repository = "https://github.com/MichalGniadek/klask"
categories = ["gui"]
keywords = ["clap", "gui", "ui", "cli", "egui"]

[dependencies]
Inflector = { version = "0.11.4", default-features = false }
clap = { version = "3", default-features = false, features = [
    "std",
    "derive",
    "unicode",
] }
heck = { version = "*", features = ["unicode"] } # Add unicode support to clap
uuid = { version = "1", features = ["v4"] }
cansi = "2.1.1"
eframe = { version = "0.18.0", default-features = false, features = [
    "default_fonts",
] }
linkify = "0.9.0"
rfd = "0.10.0"
thiserror = "1.0.35"
