[package]
name = "klask"
version = "1.0.0"
authors = ["Michał Gniadek <mgniadek@interia.pl>"]
edition = "2018"
license = "MIT"
description = "Automatically create GUI for clap apps"
repository = "https://github.com/MichalGniadek/klask"
categories = ["gui"]
keywords = ["clap", "gui", "ui", "cli", "egui"]

[dependencies]
Inflector = { version = "0.11.4", default-features = false }
cansi = "2.2.0"
clap = { version = "3", default-features = false, features = [
    "std",
    "derive",
    "unicode",
] }
clap_derive = { version = "=3.0.0" }
uuid = { version = "1.3", features = ["v4"] }
eframe = { version = "0.21", default-features = false, features = [
    "default_fonts", "glow"
] }
linkify = "0.9"
thiserror = "1.0"

[target.'cfg(not(target_os = "windows"))'.dependencies]
native-dialog = "0.6.2"

# Should make dialogs look better
[target.'cfg(target_os = "windows")'.dependencies]
native-dialog = { version = "0.6.2", features = [
    "windows_dpi_awareness",
    "windows_visual_styles",
] }
